pci update, fix abgabe date, fix team

--- a/06_pci_ue/index.html
+++ b/06_pci_ue/index.html
@@ -35,10 +35,9 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Aufgabenstellung
-							- "Wir möchten PCI compliant werden - wie bereiten wir uns auf das Audit vor?" - Eine Frage an die PCI Experten/Projektteam
+							- "Wir möchten PCI compliant werden - wie bereiten wir uns auf das Audit vor?" - Eine Frage an die PCI Experten/Projektteam.
 							- ein Dokument je Team, gegliedert anhand der 12 Requirements, mit Verbesserungsvorschlägen damit PCI Audit erfolgreich geschafft werden kann.
-							- Abgabe per Mail (pdf) bis 25.10.2018
-							- Zwei Teams
+							- Abgabe per Mail (pdf) bis 28.10.2018
 						</textarea>
 				</section>
 
