--- a/07_risikoanalyse/index.html
+++ b/07_risikoanalyse/index.html
@@ -257,8 +257,8 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 						### Business Continuity Planning (BCP)
-						- BCP vs. Incident Response Plan?
-						- Vorher: Business Impact Analysis (BIA)
+						- Incident Response Plan
+						- Business Impact Analysis (BIA)
 					</textarea>
 				</section>
 
@@ -276,7 +276,7 @@
 					<textarea data-template>
 						### Recovery
 						- Hot side: Gebäude mit Daten und Arbeitsplätze
-						- Warm side: Gebäude und Arbeitsplätze
+						- Warm side: Gebäude und Arbeitsplätze (keine Daten/Applikationen)
 						- Cold side: Gebäude
 					</textarea>
 				</section>
