--- a/08_risikoanalyse_ue/index.html
+++ b/08_risikoanalyse_ue/index.html
@@ -35,9 +35,8 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Aufgabenstellung (1)
-							- zwei Teams
 							- Risiko Analyse für das Unternehmen <a href="https://joseftsch.github.io/esec1/06_pci_ue/">GameChamp</a>
-							- Drei Risiken pro Team (keine doppelten/verwandten Risiken)
+							- Drei sinnvolle (!) Risiken pro Team (keine doppelten/verwandten Risiken)
 							- Abgabe als PDF via Mail am Ende der Einheit
 						</textarea>
 				</section>
