--- a/08_risikoanalyse_ue/index.html
+++ b/08_risikoanalyse_ue/index.html
@@ -37,7 +37,7 @@
 							### Aufgabenstellung (1)
 							- Risiko Analyse für das Unternehmen <a href="https://joseftsch.github.io/esec1/06_pci_ue/">GameChamp</a>
 							- Drei sinnvolle (!) Risiken pro Team (keine doppelten/verwandten Risiken)
-							- Abgabe als PDF via Mail am Ende der Einheit
+							- Abgabe als PDF via Mail am Ende der Einheit / am Ende des Tages
 						</textarea>
 				</section>
 
