update security scanning vo

--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Security Scanning (2017/2018)</title>
+		<title>ESEC1 - Security Scanning (2018/2019)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -26,8 +26,8 @@
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
-							### E-Security 1 - Security Scanning
-							#### Wintersemester 2017/2018
+							### E-Security 1 - Security Scanning - 2LE
+							#### Wintersemester 2018/2019
 							FH JOANNEUM
 						</textarea>
 				</section>
@@ -45,22 +45,63 @@
 					<textarea data-template>
 							### Varianten?
 							- Durchgeführt von interner Security Abteilung oder als "Aufklärung" von extern
-								- "Permission to Attack"
-								- Segmentation
-							- mit/ohne Credentials
-							- ...
+  							  - mit/ohne Credentials
+							  - Segmentation
+							  - Applikation, Netzwerk, Web, ...
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Penetration Test
-							- PCI: 1x pro Jahr auf alle Applikationen
-							- Meist über mehrere Wochen mit Abschlussbericht
+							### Penetration Test 1
+							- Meist über (mehrere) Woche(n)
+							  - Kick off, "Permission to Attack", Notfallkontakt, Abschlussbericht
 							- "Profi-Hacker/Unternehmen"
 							- Black/Grey/White Box Ansatz
 						</textarea>
 				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Penetration Test 2
+							- 1x pro Jahr Pen-Test aller "customer facing" Schnittstellen
+							  - Fix nur für >= Medium
+							  - "automatic failures"
+							- 1x pro Quartal interner Scan
+							  - Fix nur für >= High/Critical
+							- "Significant Change", Pre-Produktion Scan
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/09_securityscanning/anbieter_a.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/09_securityscanning/anbieter_b.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							<img src="images/09_securityscanning/anbieter_c.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Black/Grey/White Box
+							- Black Box: Keine Kenntnis über interne Abläufe der Applikation
+							- Grey Box: (Schnittstellen)dokumentation vorhanden
+							- White Box: Detailwissen über Applikation (Sorcecode)
+							  - Ablauf/Methoden der Applikation bekannt
+							  - Ggfs Nachteil: man "Testet um Fehler herum"
+						</textarea>
+				</section>
+
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
@@ -83,9 +124,9 @@
 							### Hacking Prozess - Reconnaissance - Information Gathering
 							- So viel Details wie möglich über das "Opfer" finden
 							  - User Accounts
-								- Laufende Prozesse
-								- Offene Ports
-								- IP/DNS
+							  - Laufende Prozesse
+							  - Offene Ports
+							  - IP/DNS
 						</textarea>
 				</section>
 
@@ -273,7 +314,7 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Security Scanning
-							#### Wintersemester 2017/2018
+							#### Wintersemester 2018/2019
 							FH JOANNEUM
 						</textarea>
 				</section>
