update security scanning vo

--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -56,9 +56,9 @@
 					<textarea data-template>
 							### Ebenen?
 							- Applikation
-							  - Fuzzing, Input Validation, ...
+							  - Input validation, Methoden, Aufbau/Stabilität der Applikation...
 							- Netzwerk
-							  - Poisining, VLAN, VOIP, ...
+							  - Poisoning, WLAN, VLAN, VOIP, ...
 							- Web
 							  - Encryption/Cipher, DOS, ...
 						</textarea>
