update security scanning vo

--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -56,7 +56,7 @@
 					<textarea data-template>
 							### Ebenen?
 							- Applikation
-							  - Input validation, Methoden, Aufbau/Stabilität der Applikation...
+							  - Input validation, Methoden, Aufbau/Stabilität der Applikation, ...
 							- Netzwerk
 							  - Poisoning, WLAN, VLAN, VOIP, ...
 							- Web
@@ -84,7 +84,7 @@
 							  - <a href="https://pci.qualys.com/static/help/merchant/vulnerabilities/pci_exceptions.htm">automatic failures</a>
 							- 1x pro Quartal interner Scan
 							  - Fix für >= High/Critical
-							- "Significant Change", Pre-Produktion Scan
+							- Unmittelbar bei "significant change", Pre-Production Scan
 						</textarea>
 				</section>
 
@@ -111,7 +111,7 @@
 							### Black/Grey/White Box
 							- Black Box: Keine Kenntnis über interne Abläufe der Applikation
 							- Grey Box: (Schnittstellen)dokumentation vorhanden
-							- White Box: Detailwissen über Applikation (Sorcecode)
+							- White Box: Detailwissen über Applikation (Sourcecode)
 							  - Ablauf/Methoden der Applikation bekannt
 							  - Ggfs Nachteil: man "Testet um Fehler herum"
 						</textarea>
