update security scanning vo

--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -210,7 +210,7 @@
 					<textarea data-template>
 							### Begriffe 2: 0-day exploit/vulnerability
 							- Vulnerability: Bislang unbekannte Schwachstelle ohne verfügbaren Patch
-							- Exploit: Applikation die 0-day Vulnerability ausnutzen kann
+							- Exploit: Applikation welche 0-day Vulnerability ausnutzen kann
 							- Beispiel: Stuxnet (4x Windows), RSA Hack (Flash Player)
 					</textarea>
 				</section>
