update security scanning vo

--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -69,7 +69,7 @@
 					<textarea data-template>
 							### Penetration Test 1
 							- "[...] authorized simulated attack on a computer system [...]"
-							- Meist über (mehrere) Woche(n)
+							- Meist über mehrere Wochen
 							  - Kick off, "Permission to Attack", Notfallkontakt, Abschlussbericht
 							- "Profi-Hacker/Unternehmen"
 							- Black/Grey/White Box Ansatz
@@ -110,7 +110,7 @@
 					<textarea data-template>
 							### Black/Grey/White Box
 							- Black Box: Keine Kenntnis über interne Abläufe der Applikation
-							- Grey Box: (Schnittstellen)dokumentation vorhanden
+							- Grey Box: Dokumentation über Schnittstellen vorhanden
 							- White Box: Detailwissen über Applikation (Sourcecode)
 							  - Ablauf/Methoden der Applikation bekannt
 							  - Ggfs Nachteil: man "Testet um Fehler herum"
@@ -155,8 +155,8 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Hacking Prozess - Scanning
-							- meist Portscanner (zb. nmap)
-							- erkennen des Systems/Software (OS/service detection)
+							- meist Portscanner (zB. nmap)
+							- erkennen des System/Software (OS/service detection)
 							- schwierig hierbei unerkannt zu bleiben
 						</textarea>
 				</section>
@@ -173,14 +173,14 @@
 					<textarea data-template>
 							### Hacking Prozess - Maintaining access
 							- "Installieren"/aufbauen eines Zugangs zum System auch wenn Schwachstelle nicht mehr existiert
-							- Über längeren Zeitraum hinweg Informationen sammeln
+							- über längeren Zeitraum hinweg Informationen sammeln
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Hacking Prozess - Clearing tracks
-							- Entfernen von "Beweisen"
+							- Entfernen von Beweisen
 							  - Log files, timestamps, Prozess, ...
 							- Erkennen von Mustern somit erschwert
 						</textarea>
@@ -189,7 +189,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Hacking Prozess - Reporting
-							- Erstellen detailierter Analysen über Prozess
+							- Erstellen detaillierter Analysen über Prozess
 							- Auflisten von Schwachstellen
 							- Auflisten von erlangten Informationen
 							- POC
@@ -200,9 +200,9 @@
 					<textarea data-template>
 							### Begriffe 1: ARP Poisoning/Spoofing
 							- Lookup IP->MAC
-							- gefälschten ARP Responses überlastet ARP Table im Switch/Computer
+							- gefälschte ARP Responses überlasten ARP Table im Switch
 							  - Pakete landen bei falschem Ziel
-							- Optimal für MITM Attacken (zb. Ettercap)
+							- Optimal für MITM Attacken (zB. Ettercap)
 						</textarea>
 				</section>
 
@@ -219,7 +219,7 @@
 					<textarea data-template>
 							### Begriffe 3: CVSS (Common Vulnerability Scoring System)
 							- Scoring von 0 bis 10
-							- Formel/Berechnung ua. auf Basis von CIA und Verbreitung und Ausnutzbarkeit
+							- Formel/Berechnung ua. auf Basis von CIA, Verbreitung und Ausnutzbarkeit
 					</textarea>
 				</section>
 
@@ -298,7 +298,7 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 							### Security Scanner: OpenVAS
 							- OpenSource
 							- umfangreiche Konfiguration via Web UI
-							- einfach Updates via CLI Tool
+							- einfaches Update via CLI Interface
 						</textarea>
 				</section>
 
@@ -349,7 +349,7 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Exploit DB und OWASP Top 10 2017
+							### OWASP Top 10 2017 und Exploit-DB
 							- <a href="https://www.owasp.org/index.php/Category:OWASP_Top_Ten_2017_Project">OWASP</a>
 							- <a href="https://www.exploit-db.com/">exploitdb</a>
 							  - <a href="https://www.exploit-db.com/exploits/45638/">libssh</a>
