--- a/12_securitystandards/index.html
+++ b/12_securitystandards/index.html
@@ -92,9 +92,18 @@
 					<textarea data-template>
 							### Guidelines 3 - BSI
 							- Gegründed 1991 / Bonn
-							- Guidelines als auch Zertifizierung von Unternehmen/Produkten
+							- Sowohl Guidelines als auch Zertifizierung von Unternehmen/Produkten
 							- <a href="https://www.bsi.bund.de/DE/Themen/ITGrundschutz/ITGrundschutzKataloge/Inhalt/_content/download/download.html">IT Grundschutz Handbuch</a>
 							- Unterteilt in fünf Abteilungen ("Staat/Wirtschaft", "Cyber-Sicherheit", "Krypto-Technologie", "Cyber-Sicherheit in der Digitalisierung", "Zentrale Aufgaben")
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Guidelines 3 - BSI
+							- BSI-Stan­dard 200-1: Ma­na­ge­ment­sys­te­me für In­for­ma­ti­ons­si­cher­heit
+							- BSI-Stan­dard 200-2: IT-Grund­schutz-Vor­ge­hens­wei­se
+                            - BSI-Stan­dard 200-3: Ri­si­ko­management
 						</textarea>
 				</section>
 
@@ -178,6 +187,18 @@
 						</textarea>
 				</section>
 
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						<img src="images/12_securitystandards/ISO_IEC_27000_Normenreihe_Uebersicht.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+						<img src="images/12_securitystandards/pdca.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
 					<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Hyprid Framework
@@ -203,6 +224,7 @@
 							- NIST SP 800: https://www.nist.gov/itl/nist-special-publication-800-series-general-information
 							- BAFIN: https://www.bafin.de/DE/Aufsicht/BankenFinanzdienstleister/Zulassung/zulassung_node.html
 							- ISO: https://www.plan42.com/index.php/de/it-security-management/iso-27000-reihe
+							- Georg Mittenecker, E-Security 1, Wintersemester 2017/18
 						</textarea>
 				</section>
 
