--- a/12_securitystandards/index.html
+++ b/12_securitystandards/index.html
@@ -63,7 +63,7 @@
 							- Verweis auf Guidelines und "industry accepted standards"
 							- Anerkanntes Gütesiegel und Vertrauen
 							- Meist aufwändiger und mehrstufiger Prozess
-							  - Mitarbeit und Akzeptanz des Unternehmens notwendig
+							  - Mitarbeit und Akzeptanz des Unternehmens/MA notwendig
 						</textarea>
 				</section>
 
@@ -71,10 +71,10 @@
 					<textarea data-template>
 							### Guidelines 1
 							- <a href="https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/system_administrators_guide/index">Red Hat Enterprise Administrator Guidelines</a>
-						    - <a href="https://nvd.nist.gov/ncp/checklist/629">NIST Hardening</a>
-						    - <a href="https://www.cisecurity.org/cis-benchmarks/">CIS Benchmark</a>
-						    - <a href="https://wiki.mozilla.org/Security/Server_Side_TLS">Mozilla TLS</a>
-						    - ...
+							- <a href="https://nvd.nist.gov/ncp/checklist/629">NIST Hardening</a>
+							- <a href="https://www.cisecurity.org/cis-benchmarks/">CIS Benchmark</a>
+							- <a href="https://wiki.mozilla.org/Security/Server_Side_TLS">Mozilla TLS</a>
+							- ...
 						</textarea>
 				</section>
 
@@ -84,7 +84,7 @@
 							- Non-Profit / 2010 gegründet
 							- Dezentral oranisiert, Mitglieder aus verschiedenen Unternehmen
 							- <a href="https://www.cisecurity.org/cis-benchmarks/">CIS Benchmark</a>
-						    - <a href="https://www.cisecurity.org/cybersecurity-best-practices/">CIS Best Practices</a>
+							- <a href="https://www.cisecurity.org/cybersecurity-best-practices/">CIS Best Practices</a>
 						</textarea>
 				</section>
 
@@ -103,7 +103,7 @@
 							### Guidelines 3 - BSI
 							- BSI-Stan­dard 200-1: Ma­na­ge­ment­sys­te­me für In­for­ma­ti­ons­si­cher­heit
 							- BSI-Stan­dard 200-2: IT-Grund­schutz-Vor­ge­hens­wei­se
-                            - BSI-Stan­dard 200-3: Ri­si­ko­management
+							- BSI-Stan­dard 200-3: Ri­si­ko­management
 						</textarea>
 				</section>
 
