--- a/12_securitystandards/index.html
+++ b/12_securitystandards/index.html
@@ -179,11 +179,24 @@
 						</textarea>
 				</section>
 
-					<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### ISO 27001
 							- Alles ab 27001 sind Ergänzungen und genauere Spezifikationen je Branche
 							  - zB. ISO 27011 für Telekommunikation; ISO 27799 für Gesundheitssektor
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### ISO 27002
+							- Spezialisiert auf Informationssicherheit, letzte Ausgabe 2013
+							- 14 Kategorien; ua:
+								- Sicherheitsleitlinien (information security policies)
+								- Organisation der Informationssicherheit (organization of information security)
+								- Personalsicherheit (human resources security)
+								- Management von organisationseigenen Werten (asset management)
+								- Zugangskontrolle (access control)
 						</textarea>
 				</section>
 
@@ -201,9 +214,19 @@
 
 					<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Hyprid Framework
+							### Hybrid Framework
 							- "Cherry Picking" von Regeln und Normen von verschiedenen anerkannten Standards
 							- Beispiel: PCI: Vielzahl an Überschneidungen mit anderen Normen
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Überschneidungen der Standards?
+							- Information Security Policy
+								- ISO 27002 Kapitel 5
+								- COBIT "Plan & Organize"
+								- PCI: "Maintain an Information Security Policy"
 						</textarea>
 				</section>
 
@@ -225,6 +248,7 @@
 							- BAFIN: https://www.bafin.de/DE/Aufsicht/BankenFinanzdienstleister/Zulassung/zulassung_node.html
 							- ISO: https://www.plan42.com/index.php/de/it-security-management/iso-27000-reihe
 							- Georg Mittenecker, E-Security 1, Wintersemester 2017/18
+							- https://searchsecurity.techtarget.com/tip/IT-security-frameworks-and-standards-Choosing-the-right-one
 						</textarea>
 				</section>
 
