--- a/12_securitystandards/index.html
+++ b/12_securitystandards/index.html
@@ -52,7 +52,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Guidelines
-							- Hinweise/Empfehlung für Best Practice Installation
+							- Hinweise/Empfehlungen für Best Practice Installation
 							- Herausgegeben von Hersteller oder Institution
 						</textarea>
 				</section>
@@ -69,7 +69,7 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Guidelines 1
+							### Guidelines
 							- <a href="https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/system_administrators_guide/index">Red Hat Enterprise Administrator Guidelines</a>
 							- <a href="https://nvd.nist.gov/ncp/checklist/629">NIST Hardening</a>
 							- <a href="https://www.cisecurity.org/cis-benchmarks/">CIS Benchmark</a>
@@ -80,9 +80,9 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Guidelines 2 - CIS
+							### Guidelines - CIS
 							- Non-Profit / 2010 gegründet
-							- Dezentral oranisiert, Mitglieder aus verschiedenen Unternehmen
+							- Dezentral organisiert, Mitglieder aus verschiedenen Unternehmen
 							- <a href="https://www.cisecurity.org/cis-benchmarks/">CIS Benchmark</a>
 							- <a href="https://www.cisecurity.org/cybersecurity-best-practices/">CIS Best Practices</a>
 						</textarea>
@@ -90,7 +90,7 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Guidelines 3 - BSI
+							### Guidelines - BSI
 							- Gegründed 1991 / Bonn
 							- Sowohl Guidelines als auch Zertifizierung von Unternehmen/Produkten
 							- <a href="https://www.bsi.bund.de/DE/Themen/ITGrundschutz/ITGrundschutzKataloge/Inhalt/_content/download/download.html">IT Grundschutz Handbuch</a>
@@ -100,7 +100,7 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Guidelines 3 - BSI
+							### Guidelines - BSI
 							- BSI-Stan­dard 200-1: Ma­na­ge­ment­sys­te­me für In­for­ma­ti­ons­si­cher­heit
 							- BSI-Stan­dard 200-2: IT-Grund­schutz-Vor­ge­hens­wei­se
 							- BSI-Stan­dard 200-3: Ri­si­ko­management
@@ -109,7 +109,7 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Guidelines 4 - NIST
+							### Guidelines - NIST
 							- Speziell für US Regierungseinrichtungen
 							- 800-* speziell für IT Security
 							- 800-53 (generelle Übersicht), 800-153	(WIFI), 800-187	(LTE Security)
@@ -124,7 +124,7 @@
 							- CISQ
 							- BAFIN
 							- ISO 27000
-							- Hyprid Framework
+							- Hybrid Framework
 						</textarea>
 				</section>
 
@@ -171,9 +171,9 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### ISO 27001
-							- Kann gegen eine Organisation geprüft werden
+							- Zertifizierung für ein Unternehmen
 							  - Personen könne Qualifikationen zertifizieren für die jeweiligen Aufgaben
-							- Vollständiger Aufbau und Betrieb eines "Information Security Management System, ISMS"
+							- Vollständiger Aufbau und Betrieb eines Information Security Management System, ISMS
 							- Deckt ua. folgende Punkte ab:
 							  - Netzwerksicherheit, Organisationsstruktur, Verantwortlichkeiten/Risikoanalyse, Notfallplanung, Klassifizierung von Informationen
 						</textarea>
