sec scan uebung

--- a/10_securityscanning_ue/index.html
+++ b/10_securityscanning_ue/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Security Scanning - Übung (2017/2018)</title>
+		<title>ESEC1 - Security Scanning - Übung (2018/2019)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -27,7 +27,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Security Scanning - Übung
-							#### Wintersemester 2017/2018
+							#### Wintersemester 2018/2019
 							FH JOANNEUM
 						</textarea>
 				</section>
@@ -37,7 +37,7 @@
 							### Aufgabenstellung
 							- Kali Linux und Nexpose VM lokal in Betrieb nehmen
 							- Reconnaissance mit nmap (verschiedene Optionen probieren)
-							- Scannen der "verwundbaren" VMs mit Nessus, Openvas und Nexpose
+							- Scannen der "verwundbaren" VMs mit Nessus, Openvas, Nexpose, ...
 								- Tunen der Optionen
 								- Herausfinden von Unterschieden in den Scanergebnissen
 								- Was ist CVSS oä. ?
@@ -71,7 +71,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Security Scanning - Übung
-							#### Wintersemester 2017/2018
+							#### Wintersemester 2018/2019
 							FH JOANNEUM
 						</textarea>
 				</section>
