sec scan uebung

--- a/10_securityscanning_ue/index.html
+++ b/10_securityscanning_ue/index.html
@@ -51,9 +51,9 @@
 							### Credentials (1)
 							#### Kali Linux
 							- login: root/toor
-							- openvas (openvas-start)
-								- login: esec/esec
-							- nessus (/etc/init.d/nessusd start)
+							- openvas (openvas-start) - https://127.0.0.1:9392
+								- login: admin/esec
+							- nessus (/etc/init.d/nessusd start) - https://ip:8834/
 								- login: esec/esec
 						</textarea>
 				</section>
